# RoundPipe

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  requirements-dev.txt  search.html  setup.cfg  sitemap.xml
.github/workflows/: docs-page.yml  format.yml  pyright.yml  release.yml
API/context/: index.html
API/grad_scaler/: index.html
API/logging/: index.html
API/model/: index.html
API/optimizer/: index.html
API/run_config/: index.html
Developer/contact/: index.html
Developer/contribute_model/: index.html
Developer/contribute_optimizer/: index.html
Developer/contribute_roundpipe/: index.html
Developer/internal_apis/: index.html
ModelZoo/model_presets/: index.html
RoundPipe/: RoundPipe.py  RunConfig.py  __init__.py  batch.py  context.py  device.py  grad_scaler.py  optim.py  optim_stream.py  param.py  profile.py  run.py  scheduler.py  threads.py  timer.py  transfer.py  utils.py  wrapper.py
RoundPipe/models/: __init__.py  function.py  qwen3.py
RoundPipe/optim/: adam.py  optim_builder.py
Tutorial/: index.html
UserGuide/overview/: index.html
assets/: index.css
benchmark/: qwen.py  train.py  train_lora.py
docs/: Tutorial.en.md  Tutorial.md  index.en.md  index.zh.md
docs/API/: context.en.md  context.zh.md  grad_scaler.en.md  grad_scaler.zh.md  logging.en.md  logging.zh.md  model.en.md  model.zh.md  optimizer.en.md  optimizer.zh.md  (+2 more)
draw/: common.py  gen_figures.py  index.fig1.py  index.fig2.py  index.fig3.py  index.fig5.py
example/: qwen.py  qwen3_nekoqa.en.ipynb  qwen3_nekoqa.zh.ipynb  qwen_classic.py  resnet.py  resnet_cifar100.en.ipynb  resnet_cifar100.zh.ipynb  resnet_classic.py
model_zoo/: index.html
roundpipe/: __init__.py  attribute.py  batch.py  context.py  device.py  grad_scaler.py  memory.py  optim_stream.py  param.py  profile.py  roundpipe.py  run.py  run_config.py  scheduler.py  threads.py  timer.py  transfer.py  utils.py  wrapper.py
search/: search_index.json
tests/: test_RoundPipe.py  test_batch.py  test_optim.py  test_qwen3.py  test_qwen3_ref.pkl  test_roundpipe.py
zh/: index.html
(+104 files in other folders)
