[metadata]
name = RoundPipe
version = 0.1.0
author = ITcarrot
author_email = luo-yb25@mails.tsinghua.edu.cn
description = Zero bubble pipeline training framework for consumer GPUs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ITcarrot/RoundPipe
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    tqdm
    transformers

[options.packages.find]
exclude =
    tests*
