[metadata]
name = RoundPipe
version = 0.1.0
author = ITcarrot
author_email = luo-yb25@mails.tsinghua.edu.cn
description = Large DNNs training framework for consumer GPUs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ITcarrot/RoundPipe
license = LGPL-3.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: LGPL-3.0 License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    beartype
    ninja
    py-cpuinfo
    torch>=2.4
    tqdm
    typing-extensions>=4.6.0

[options.package_data]
roundpipe = 
    optim/csrc/*.cpp

[options.packages.find]
exclude =
    tests*
